--- a/package.json
+++ b/package.json
@@ -28,11 +28,11 @@
 		"reflect-metadata": "^0.1.8",
 		"rxjs": "5.0.0-beta.12",
 		"systemjs": "0.19.39",
-		"zone.js": "^0.6.25"
+		"zone.js": "^0.6.25",
+		"crypto-js": "^3.1.7"
 	},
 	"devDependencies": {
 		"concurrently": "^3.0.0",
-		"crypto-js": "^3.1.7",
 		"lite-server": "^2.2.2",
 		"typescript": "^2.0.3",
 		"typings": "^1.4.0"
